load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    prefix = "github.com/jschaf/bazel-dummy-target",
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/jschaf/bazel-dummy-target",
    visibility = ["//visibility:private"],
    deps = ["@org_golang_google_grpc//:go_default_library"],
)

go_binary(
    name = "bazel-dummy-target",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
